<?xml version="1.0" encoding="utf-8"?><!--
/*#######################################################
 *
 *   Maintained 2026 by the Markor fork (AlexZ005/markor), Git tab
 *   License of this file: Apache 2.0
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
#########################################################*/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/git__fragment__menu_fetch"
        android:title="@string/git_tab__fetch" />
    <item
        android:id="@+id/git__fragment__menu_switch"
        android:title="@string/git_tab__switch_repository" />
    <item
        android:id="@+id/git__fragment__menu_remote"
        android:title="@string/git_tab__remote" />
    <item
        android:id="@+id/git__fragment__menu_remove"
        android:title="@string/git_tab__remove_from_list" />
</menu>
