<?xml version="1.0" encoding="utf-8"?><!--
/*#######################################################
 *
 *   Maintained 2026 by the Markor fork (AlexZ005/markor), Git tab
 *   License of this file: Apache 2.0
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
#########################################################*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/git_author_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/secondary_text" />

    <EditText
        android:id="@+id/git__author_dialog__name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/git_author_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords"
        android:maxLines="1"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/git__author_dialog__email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/git_author_email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="16sp" />
</LinearLayout>
